--- a/web/main.css
+++ b/web/main.css
@@ -5,3 +5,14 @@
     width: 900px;
     height: 900px;
 }
+
+.item0 {
+    grid-column-start: 1;
+    grid-column-end: 3;
+}
+
+.itemEquals {
+    grid-row-start: 4;
+    grid-row-end: 6;
+    grid-column-start: 4;
+}
