--- a/web/main.css
+++ b/web/main.css
@@ -8,12 +8,12 @@
     margin-right: auto;
 }
 
-.item0 {
+.button-0 {
     grid-column-start: 1;
     grid-column-end: 3;
 }
 
-.itemEquals {
+.button-calc {
     grid-row-start: 4;
     grid-row-end: 6;
     grid-column-start: 4;
@@ -26,5 +26,3 @@
     width: 700px;
     height: 150px;
 }
-
-
